fix: appbar overlaping with app.tsx content

--- a/quiz/src/App.css
+++ b/quiz/src/App.css
@@ -1,4 +1,6 @@
 .App {
+  padding-top:5rem;
+  height:100vh;
 }
 
 .App-logo {
